--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -1,10 +1,15 @@
 name: 02 - Worflpw Events
 
-on: push
+on: 
+  push:
+  pull_request:
+  schedule:
+    - cron: '* /5* * * *'
+  workflow_dispatch:
 
 jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
       - name: show the trigger
-        run: echo "I've been triggerd by a(n) ${{ github.event_name }}"
+        run: echo "I've been triggerd by a(n) ${{ github.event_name }} event."
